Fix a bug with the scroll on safari due to touch action on the body or html element

--- a/src/public/app/css/index.css
+++ b/src/public/app/css/index.css
@@ -13,6 +13,7 @@ html {
     height: 100%;
 
     overflow: hidden;
+    touch-action: none;
 }
 
 body {
@@ -24,6 +25,7 @@ body {
     color: var(--color-dark-0);
 
     overflow: hidden;
+    touch-action: none;
 }
 
 a {
